--- a/style.css
+++ b/style.css
@@ -631,5 +631,5 @@ svg circle:nth-child(2)
 .form{
     width: 60%;
     height: 80vh;
-    background-color: aliceblue;    
+    background-color: rgb(137, 175, 208);    
 }
