--- a/style.css
+++ b/style.css
@@ -2,6 +2,31 @@
     margin: 0%;
     padding: 0%;
 }
+#progress{
+    background-color: orangered;
+    position: fixed;
+    bottom: 20px;
+    right: 10px;
+    height: 70px;
+    width: 70px;
+    display: grid;
+    place-items: center;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+#progress-value{
+    display: block;
+    height: calc(100% - 15px);
+    width: calc(100% - 10px);
+    background-color: #ffffff;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    font-size: 28px;
+    color: #001a2e;
+
+}
 .head{
     width: 100%;
     height: 10vh;
@@ -45,14 +70,14 @@
     align-items: center;
 
 }
-.header-icons a{
+a{
     color: black;
     padding: 10px;
 }
-.header-icons a i{
+a i{
     font-size: 25px;
 }
-.header-icons a i:hover{
+a i:hover{
     font-size: 30px;
     color: orangered;
 }
@@ -179,8 +204,6 @@ span{
     width: 100%;
     height: 100vh;
     display: flex;
-    
-
 }
 .box1{
     width: 30%;
@@ -365,7 +388,8 @@ span{
 #Skills{
     width: 100%;
     height: 100vh;
-    background-image: url(./img/pattern.png);
+    /* background-image: url(./img/HD\ \(2\).jpg);
+    background-size: cover; */
     
 }
 .skills-heading{
@@ -378,7 +402,7 @@ span{
     text-align: center;
     padding-top: 30px;
     font-size: 40px;
-    color: white;
+    /* color: white; */
     font-family: 'pacific', cursive;
     /* text-shadow: 2px 2px 1px #000; */
 }
@@ -522,7 +546,7 @@ svg circle:nth-child(2)
     width: 100%;
     height: 100vh;
     /* background-color: rgb(19, 63, 63); */
-    background-image: url(./img/pattern.png);
+    /* background-image: url(./img/pattern.png); */
 }
 .Servies-container{
     width: 90%;
@@ -537,7 +561,7 @@ svg circle:nth-child(2)
     height: 70vh;
     background: linear-gradient(to right , #222 0%, #222 50%,
     rgb(29,29,29) 50%,   rgb(23, 22, 22) 100%);
-    border-radius: 5px;
+    border-radius: 10px;
 }
 /* .servies-box-1:hover{
     width: 26%;
@@ -630,7 +654,8 @@ svg circle:nth-child(2)
 }
 .form-div{
     width: 50%;
-    height: 80vh;    
+    height: 80vh;
+    background-color: white;
 }
 .form{
     width: 90%;
@@ -696,14 +721,33 @@ form textarea{
 footer{
     width: 100%;
     height: 40vh;
-    background-image: url(./img/pattern.png);
+    /* background-image: url(./img/pattern.png); */
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .footer-div1{
     width: 40%;
     height: 30vh;
-    background-color: #222;
+    /* background-color: #222; */
+}
+.footer-div1 h1{
+    font-size: 40px;
+    font-family: 'pacific', cursive;
+}
+.footer-div1 p span{
+    color: orangered;
+    font-family: 'pacific', cursive;
+    font-size: 20px;
+}
+.footer-icon{
+    width: 100%;
+    height: 10vh;
+    /* background-color: gainsboro; */
+    display: flex;
+    border-radius: 100px;
+    justify-content: center;
+    align-items: center;
 }
