--- a/style.css
+++ b/style.css
@@ -283,6 +283,28 @@ span{
     }
 }
 
+@media (max-width:300px) {
+    #heading-container{
+        width: 100%;
+        height: 40vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .heading-box{
+        width: 80%;
+        height: 25vh;
+        text-align: center;
+    }
+    .heading-box h1{
+        padding-top: 20px;
+        font-size: 23px;
+    }
+    .heading-box h1 span{
+        padding-top: 10px;
+        font-size: 24px;
+    }
+}
 
 /* =================================================================================================================== */
 
