--- a/style.css
+++ b/style.css
@@ -567,6 +567,77 @@ span{
 
 }
 
+@media (max-width:300px){
+    #about-us{
+        width: 100%;
+        height: 230vh;
+        display: block;
+    }
+    .box1{
+        width: 100%;
+        height: 80vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .box1-1{
+        width: 80%;
+        height: 90%;
+    }
+    .content-left{
+        width: 100%;
+        height: 30%;
+        text-align: center;
+        margin-top: 15px;
+        font-family:'Times New Roman', Times, serif;
+
+    }
+    .content-left h5{
+        letter-spacing: 2px;
+        font-size: 15px;
+        padding: 10px;
+    }
+    .content-left p{
+        font-size: 17px;
+        padding: 10px;
+        font-family:'Times New Roman', Times, serif;
+    }
+    .box2{
+        width: 100%;
+        height: 70vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .box3{
+        width: 100%;
+        height: 80vh;
+    }
+    .box3-1{
+        width: 80%;
+        height: 90%;
+    }
+    .content-right{
+        width: 100%;
+        float: left;
+        height: 22%;
+        font-family:'Times New Roman', Times, serif;
+    }
+    .content-right h5{
+        font-size: 15px;
+        letter-spacing: 2px;
+        padding: 10px;
+        text-align: center;
+    }
+    .content-right p{
+        padding-right: 10px;
+        font-size: 40px;
+        text-align: center;
+        font-family:'Times New Roman', Times, serif;
+
+    }
+
+}
 
 
 
