--- a/style.css
+++ b/style.css
@@ -1099,6 +1099,39 @@ svg circle:nth-child(2)
 }
 
 
+@media (max-width:300px){
+    #Skills{
+        width: 100%;
+        height: 220vh;        
+    }
+    .skills-heading{
+        width: 90%;
+        height: 15vh;
+        margin: 0% auto;
+    }
+    .skills-heading h1{
+        text-align: center;
+        padding-top: 30px;
+        font-size: 40px;
+        font-family:'Times New Roman', Times, serif;
+
+    }
+    .skills-bars{
+        width: 90%;
+        height: 200vh;
+        margin: 0% auto;
+        flex-direction:column;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .container
+    {
+      width: 100%;
+      display:flex;
+      justify-content:space-around;
+      margin-top: 10px;
+    }
+ }
 
 
 
