--- a/style.css
+++ b/style.css
@@ -1365,7 +1365,60 @@ svg circle:nth-child(2)
     }
 }
 
-
+@media (max-width: 300px){
+    #Servies{
+        width: 100%;
+        height: 260vh;
+    }
+    .Servies-container{
+        width: 90%;
+        height: 240vh;
+        margin: 0 auto;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .servies-box-1{
+        width: 80%;
+        height: 70vh;
+        background: linear-gradient(to right , #222 0%, #222 50%,
+        rgb(29,29,29) 50%,   rgb(23, 22, 22) 100%);
+        border-radius: 10px;
+    }
+    .servies-img{
+        width: 100%;
+        height: 40%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .image{
+        width: 45%;
+        height: 60%;
+        border-radius: 100%;
+    
+    }
+    .servies-heading{
+        width: 100%;
+        height: 10%;
+        text-align: center;
+    }
+    .servies-para{
+        width: 100%;
+        height: 50%;
+        text-align: center;
+        padding: 5px;
+    }
+    .servies-heading h1{
+        font-size: 20px;
+        font-family:'Times New Roman', Times, serif;
+        color: white;
+    }
+    .servies-para p{
+        font-size: 14px;
+        line-height: 30px;    
+    }
+}
 
 /* =================================================================================================================== */
 
