--- a/style.css
+++ b/style.css
@@ -168,6 +168,42 @@ a i:hover{
     }
 }
 
+@media (max-width:300px) {
+    .head{
+        width: 100%;
+        height: 50vh;
+        display: inline-block;
+    }
+    .header-menu{
+        width: 100%;
+        height: 45vh;
+        text-align: left;
+    }
+    .header-menu ul{
+        list-style: none;
+        flex-direction: column;
+    }
+    .header-menu ul li{
+        padding-left: 5px;
+        padding-top: 5px;
+        font-family: 'pacific', cursive;
+    
+    }
+    
+    .header-logo{
+        display: none;
+    }
+    .header-icons{
+        width: 100%;
+        height: 10vh;
+        background-color: rgba(220, 220, 220, 0.411);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+    }
+}
+
 
 /* ================================================================================================================ */
 
